--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,16 @@
 <body>
     <header>
         <nav class="nav-bar">
-            <p class="title"> Tasteyy </p>
+            {% if user.is_authenticated %}
+                {% if request.resolver_match.url_name == "profile_view" or request.resolver_match.url_name == "upload-recipe"%}
+                    <p class="title">Hello, {{ user.username }}</p>
+                {% else %}
+                    <a href="{% url 'home' %}" class="title">Tasteyy</a>
+                {% endif %}
+            {% else %}
+                    <a href="{% url 'home' %}" class="title">Tasteyy</a>
+            {% endif %}
+
 
             {% if request.resolver_match.url_name != "profile" %}
             <form method="get" action="{% url 'recipes:search' %}">
@@ -25,11 +34,11 @@
 
             <ul>
                 {% if user.is_authenticated %}
-                    <li><a href=""><i class="fas fa-user"></i> My Account</a></li>
-                    <li><a href="accounts/logout"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+                    <li><a href="{% url 'accounts:profile_view' %}"><i class="fas fa-user"></i> My Account</a></li>
+                    <li><a href="{% url 'accounts:logout' %}"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
                 {% else %}
-                    <li><a href="accounts/login"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-                    <li><a href="accounts/register"><i class="fas fa-user-plus"></i> Register</a></li>
+                    <li><a href="{% url 'accounts:login' %}"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+                    <li><a href="{% url 'accounts:register' %}"><i class="fas fa-user-plus"></i> Register</a></li>
                 {% endif %}
             </ul>
             
