feat: change recipe_detail template

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -9,7 +9,7 @@
 
     <!-- Upload Button -->
     <div class="upload-container">
-        <a href="{% url 'accounts:upload-recipe' %}" class="upload-btn">Upload New Recipe</a>
+        <a href="{% url 'recipes:upload-recipe' %}" class="upload-btn">Upload New Recipe</a>
     </div>
 
     <!-- User's Recipes -->
