feat: fix tasks.py to search for ingredients in the detailed search

--- a/recipes/templates/recipes/recipe_detail.html
+++ b/recipes/templates/recipes/recipe_detail.html
@@ -117,7 +117,7 @@
         <p> {{ recipe.servings }} servings</p>
     </div>
 
-    <!-- Diet bubbles section -->
+    <!-- Diet bubbles section
     <div class="diet-bubbles">
         {% if recipe.diet %}
             {% for diet_item in recipe.diet %}
@@ -126,7 +126,7 @@
         {% elif recipe.diet_type %}
             <div class="diet-bubble">{{ recipe.diet_type }}</div>
         {% endif %}
-    </div>
+    </div> -->
 
     <div class="nutritional-value">
         <h1> Nutritional Values </h1>
