--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -1,4 +1,4 @@
-{% extends 'accounts/base.html' %}
+{% extends 'registration/base.html' %}
 {% block title %}Sign up{% endblock %}
 
 {% block content %}
