--- a/recipes/templates/recipes/recipe_detail.html
+++ b/recipes/templates/recipes/recipe_detail.html
@@ -14,7 +14,7 @@
         {% elif recipe.image_url %}
             <img src="{{recipe.image_url}}" alt="{{ recipe.title }}">
         {% else %}
-            <img src="{% static 'recipes/images/default.jpg' %}" alt="{{ recipe.title }}">
+            <img src="{% static 'recipes/images/default.png' %}" alt="{{ recipe.title }}">
         {% endif %}
 
         <h1> {{ recipe.title }}</h1>
