--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,6 @@
                     <a href="{% url 'home' %}" class="title">Tasteyy</a>
             {% endif %}
 
-
             {% if request.resolver_match.url_name != "profile" %}
             <form method="get" action="{% url 'recipes:search' %}">
                 <i class="fas fa-search search-icon"></i>
@@ -32,7 +31,7 @@
             </form>
             {% endif %}
 
-            <ul>
+            <ul class="accordion">
                 {% if user.is_authenticated %}
                     <li><a href="{% url 'accounts:profile_view' %}"><i class="fas fa-user"></i> My Account</a></li>
                     <li><a href="{% url 'accounts:logout' %}"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
@@ -41,6 +40,10 @@
                     <li><a href="{% url 'accounts:register' %}"><i class="fas fa-user-plus"></i> Register</a></li>
                 {% endif %}
             </ul>
+
+            <button class="hamburger" id="hamburger">
+                <i class="fas fa-bars"></i>
+            </button>
             
         </nav>
     </header>
@@ -52,4 +55,43 @@
     </main>
 
 </body>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const hamburger = document.getElementById('hamburger');
+        const navMenu = document.querySelector('.nav-bar ul.accordion');
+
+        // Toggle mobile menu
+        hamburger.addEventListener('click', function() {
+            navMenu.classList.toggle('active');
+
+            //change the ha,burger icon to X
+            const icon = hamburger.querySelector('i');
+            if (navMenu.classList.contains('active')) {
+                icon.className = 'fas fa-times'
+            } else {
+                icon.className = 'fas fa-bars';
+            }
+        });
+
+        // Close menu when the nav links are clicked
+        const navLinks = navMenu.querySelectorAll('a');
+        navLinks.forEach(link => {
+            link.addEventListener('click', function() {
+                navMenu.classList.remove('active');
+                hamburger.querySelector('i').className = 'fas fa-bars';
+            });
+        });
+
+        // Close menu when clicking outside
+        document.addEventListener('click', function(event) {
+            const navbar = document.querySelector('.nav-bar');
+            if (!navbar.contains(event.target) && navMenu.classList.contains('active')) {
+                navMenu.classList.remove('active');
+                hamburger.querySelector('i').className = 'fas fa-bars';
+            }
+        });
+    })
+</script>
+
 </html>
